@@ -997,7 +997,7 @@ display_it:
 				break;
 			else if(no_resp_flag1 && no_resp_flag2)
 				break;
-			
+
 			if(node_ptr->node_state != search_info->int_data)
 				continue;
 			break;
@@ -1022,7 +1022,6 @@ display_it:
 		
 		if(!found)
 			continue;
-		
 		list_push(send_info_list, sview_node_info_ptr);
 		change_grid_color(popup_win->grid_button_list,
 				  i, i, 0, true);
